--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy SvelteKit to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]   # 🚀 деплой при каждом пуше в main
-  workflow_dispatch:        # ✋ возможность запускать руками через Actions → Run workflow
+    branches: [ "main" ]   # 🚀 деплой только при пуше/мерже в main
+  workflow_dispatch:        # ✋ запуск руками (например, если нужно перегнать билд)
 
 permissions:
   contents: read
